bdr.BDR.scala.error
Compilation error:
BDR:31: error: value update is not a member of String
    if (litMessage()="X") {
        ^